Fix docs path
